# zilant-prime-core

./: .coverage  .coveragerc  .flake8  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .ruff.toml  .semgrep.yml  .semgrepignore  .zilant_log  .zilant_log.1  .zilant_log.3  CHANGELOG.md  CHANGELOG_AUTO.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  REUSE.toml  SECURITY.md  Zilant.nuspec  _winapi.py  attest.py  audit-ledger.jsonl  bench_vdf.py  ci.yml  commitlint.config.cjs  conftest.py  cosign.key  cosign.key.b64  cosign.pub  coverage.ini  coverage.xml  demo.py  demo_secure.py  gitleaks.baseline  grype-report.json  (+24 more)
.github/: CODEOWNERS  cosign.pub  release-drafter.yml
.github/ISSUE_TEMPLATE/: BUG_BOUNTY.yml  bug_report.yml  foundation_done.md  security_report.yml
.github/policies/: policy.yaml
.github/workflows/: benchmark.yml  build-and-test.yml  changelog.yml  ci.yml  codeql-analysis.yml  codeql-semgrep.yml  codeql.yml  commitlint.yml  cosign-sign-artifacts.yml  crypto-threat-model.yml  dead-code-scan.yml  docker-publish.yml  docs-autogen.yml  docs-deploy.yml  fuse.yml  fuzz-nightly.yml  fuzz.yml  gitleaks.yml  import-graph.yml  lfs-integrity.yml  license-audit.yml  lint-and-security.yml  lint-docs.yml  linux-fuse.yml  main.yml  packaging.yml  policy-enforcement.yml  publish-dry-run.yml  publish-pypi.yml  pytest-reusable.yml  python-security.yml  quality.yml  release.yml  sbom-cve.yml  sbom.yml  secret-scan.yml  security-compliance-suite.yml  security-sbom-scan.yml  security-scan.yml  security.yml  (+10 more)
.hypothesis/constants/: 01f5da78ca47f6a9  04514389a1350dab  0eb5a4e3fb176d7e  13168eee3e5615ef  18661b71b9b5118c  1abfc93f8ca5dbec  224ac7169223dd69  2a0032561362418e  2c988f2a801a59b1  3264c4bca5f88bd7  33ddc46f276b664b  342b8b90977b1676  3b52701eb26ba65e  44e81da5856e3520  4efa81491a107570  5c7875f9853a314a  741f39aaf680bb6b  7e7b88454520964e  7e85dd8ef220ebb8  81869b4586f7e3c0  8270ed43bfbd6636  8bb775644afa3a79  8c599de2cc194d05  8e4b0330ce3d14c2  8e94bfe3eff8da95  9048ca4ac3c81cf4  95599906711b8ae9  a33aada44e36d6fd  a3c328a84eca9a7e  a6b8937640ae6f76  b08d257cb2c44e40  b6b776cf61a9a864  be4227a6c9ac7d18  c77bdf6a49e76089  c905d812f37a0579  cebde94cb3196a86  d0e5188ff6645e1a  d4e75d7452645304  da39a3ee5e6b4b0d  e24d8b0a120fae8b  (+7 more)
.pytest_temp/test_pack_unpack_roundtrip0/: dragon.raw
.reuse/: ignore
.semgrep/custom/: click-prompt-insecure.yml  container-same-path.yml  heal-no-rm.yml  insecure-hash.yml  large-wheel.yml  no-shell-true.yml  pq-key-none.yml  requests-timeout.yml  rules.yml  vdf-invalid-steps.yml
Formula/: zilant.rb
LICENSES/: MIT.txt
PySide6/: QtWidgets.py
QA/: RC_checklist.md
bench/: bench_aead.py  bench_container.py  bench_kdf.py
completions/: _zilant  zilant.bash  zilant.fish
coverage/: coverage.xml
docs/: ANONYMITY.md  ARCH.md  ARCH.puml  Makefile  QA_CHECK.md  QUANTUM_SECURITY.md  SoA_ISO27001.j2  THREATS.md  THREATS.rst  _linkcheck_ignore.txt  api.rst  conf.py  devops.rst  index.rst  iso_controls.yml  iso_soa.json  observability.rst  requirements.txt  threats.mmd  threats_diagram.mmd  whitepaper.yml
docs/api/: autogen.rst  pq_ring.rst  qal.rst  qvpn.rst  zkqp.rst
docs/architecture/: index.rst  key_lifecycle.mmd
docs/guides/: ring_signature_example.rst  self_heal_container.rst  tor_proxy_qvpn.rst  zilantfs.md
docs/how-to/: ring_signatures.md  tor_proxy.md
flatpak/: org.zilant.Zilant.json
fuzz/: aead_fuzz.py  vdf_fuzz.py
mobile/android/: README.md  build.gradle  gradlew  gradlew.bat  settings.gradle
packaging/chocolatey/: chocolateyinstall.ps1
packaging/deb/: control  postinst  prerm
packaging/innosetup/: setup.iss
packaging/rpm/: zilant.spec
scripts/: post_install.sh  release.sh  reprod.sh  test_local.sh  test_win.ps1
src/: aead.py  attestation.py  audit_ledger.py  boto3.py  cli.py  config.py  container.py  crypto_core.py  crypto_utils.py  elc_vdf.py  kdf.py  key_lifecycle.py  landscape.py  pack.py  plugin_manager.py  pqcrypto.py  shamir.py  shard_secret.py  streaming_aead.py  timelock.py  tlv.py  unpack.py  uyi.py  vdf.py  zil.py
src/backends/: ipfs_backend.py  local_backend.py  s3_backend.py
src/botocore/: __init__.py  session.py  stub.py
src/plugins/: plugins.json  s3.py
src/utils/: entropy.py  file_utils.py  logging.py  secure_memory.py
src/zilant/: __init__.py  metrics.py
src/zilant_mobile/: __init__.py  unpack.py
src/zilant_prime_core/: __init__.py  bench_zfs.py  cli.py  cli_commands.py  cli_wormhole.py  counter.py  crypto_core.py  decoy_gen.py  health.py  init.py  metrics.py  notify.py  tray.py  uniform_container.py  watchdog.py  zilfs.py  (+1 more)
tests/: __init__.py  file_protection.py  test_adaptive_decoy.py  test_aead.py  test_aead_branches.py  test_aead_branches_full.py  test_aead_edge.py  test_aead_extra.py  test_aead_full.py  test_aead_missing.py  test_aead_more.py  test_aead_negative.py  test_aead_root.py  test_anti_snapshot.py  test_anti_snapshot_extra.py  test_attest.py  test_attestation.py  test_audit_ledger.py  test_audit_ledger_extra.py  test_audit_ledger_logging.py  test_audit_log.py  test_auth.py  test_auth_enhanced.py  test_bench.py  test_bench_zfs.py  test_botocore_stub.py  test_branch_cover.py  test_chaos_diskfull.py  test_chaos_sigstop.py  test_cli_additional.py  test_cli_additional_branches.py  test_cli_branches.py  test_cli_cleanup.py  test_cli_commands.py  test_cli_commands_enhanced.py  test_cli_commands_extra.py  test_cli_confirm_full.py  test_cli_decoy.py  test_cli_dest_exists_dir.py  test_cli_error_branches.py  (+276 more)
tools/: atheris_fuzz.py  auto_changelog.py  build_pq_wheels.py  changelog.py  crypto_threat_model.py  dead_code_finder.py  gen_cli_docs.py  gen_missing_tests.py  gen_threat_diagram.py  gen_whitepaper.py  import_graph.py  iso_soa_generator.py  license_audit.py  policy_autofix.py  policy_validator.py  python_security_checklist.py  render_mermaid.py  secret_scanner.py  security_compliance_suite.py  sign_artifacts.py  spdx_codify.py  strip_nuls.py  todo_report.py
ui/: Makefile  main.py
uyu_box/: cli.py  gui.py
(+99 files in other folders)
