[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zilant-prime-core"
version = "0.1.0"
description = "..."
authors = [{name="Your Name", email="you@example.com"}]
dependencies = [
 codex/завершение-разработки-mini-gui-и-devsecops
    "click>=8.0",
    "cryptography>=36.0.0",
    "PyNaCl>=1.4.0",
    "PyQt5>=5.15.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "prometheus-client>=0.16.0",
    "PyYAML>=6.0",

  "cryptography>=38.0.4,<43.0",
  "argon2-cffi>=23.1,<24.0",
  "click>=8.1,<9.0",
  "hvac>=2.3,<3.0",
  "flask>=2.2,<3.0",
  "prometheus-client>=0.16.0,<1.0",
  "shamir>=0.1",
  "pynacl>=1.5,<2.0",
  "boto3>=1.28,<2.0",
  "PyQt5>=5.15,<6.0",
  "PyYAML>=6.0,<7.0",
  "zstandard>=0.23.0",
  "tqdm>=4.66.0",
  "psutil>=5.9.0",
  "requests>=2.32,<3.0",
 main
]

[project.optional-dependencies]
dev = [
 codex/завершение-разработки-mini-gui-и-devsecops
    "pytest>=8.0.0",
    "hypothesis>=6.0.0",
    "ruff>=0.2.0",
    "black>=23.1.0",
    "isort>=5.10.1",
    "mypy>=1.8.0",
    "sphinx>=7.0",
    "filelock>=3.13.0",
    "pytest-cov>=5.0.0",
    "hvac>=2.3.0",
    "prometheus-client>=0.16.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "PyYAML>=6.0",

  "black>=24.4,<25.0",
  "isort>=5.13,<6.0",
  "ruff>=0.4,<0.5",
  "mypy>=1.10,<2.0",
  "pre-commit>=3.7,<4.0",
  "types-hvac>=2.3.0.0",
  "bandit>=1.7,<2.0",
  "semgrep>=1.68,<2.0",
  "cyclonedx-bom>=3.16,<7.0",
  "pytest>=8.0,<9.0",
  "pytest-cov>=5.0,<6.0",
  "pytest-timeout>=2.3,<3.0",
  "hypothesis>=6.100,<7.0",
  "filelock>=3.13,<4.0",
  "build",
  "twine",
  "atheris>=2.1; python_version < '3.12'",
  "pyinstaller>=6.0",
  "types-PyYAML>=6.0",
  "PyYAML>=6.0,<7.0",
  "zstandard>=0.23.0",
  "tqdm>=4.66.0",
  "psutil>=5.9.0",
  "requests>=2.32,<3.0",
]
pq = [
  "pqclean[kyber768]",
  "pqclean[dilithium2]",
  "oqs-python",
 main
]
docs = [
    "sphinx>=7.0",
    "m2r2",
    "sphinx-autodoc-typehints",
    "sphinxcontrib-mermaid",
]
ui = [
    "pyinstaller>=6.0",
    "PyQt5>=5.15.0",
]

[tool.poetry.extras]
dev = [
    "pytest", 
    "pytest-cov", 
    "hypothesis", 
    "ruff", 
    "black", 
    "isort", 
    "mypy", 
    "sphinx", 
    "filelock", 
    "hvac", 
    "prometheus-client", 
    "opentelemetry-sdk", 
    "opentelemetry-exporter-otlp", 
    "PyYAML",
]
docs = [
    "sphinx", 
    "m2r2", 
    "sphinx-autodoc-typehints", 
    "sphinxcontrib-mermaid",
]

[tool.black]
line-length = 120

[tool.isort]
known_first_party = ["zilant_prime_core"]
known_standard_library = ["tomllib"]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true

