# SPDX-License-Identifier: MIT
# SPDX-FileCopyrightText: 2025 Zilant Prime Core contributors

[build-system]
requires    = ["setuptools>=64", "wheel", "cffi"]
build-backend = "setuptools.build_meta"

[project]
name            = "zilant-prime-core"
version         = "0.1.0"
description     = "ZILANT Prime™ core: AEAD, Argon2id, Phase-VDF, .zil container & CLI"
readme          = "README.md"
requires-python = ">=3.10"
license         = { text = "MIT" }
authors = [
  { name = "Ильдар", email = "you@example.com" }
]
keywords    = ["crypto", "VDF", "argon2", "AEAD", "secure-storage"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Security :: Cryptography",
  "Typing :: Typed",
]

dependencies = [
  "cryptography>=38.0.4,<43.0",
  "argon2-cffi>=23.1,<24.0",
  "click>=8.1,<9.0",
  "hvac>=2.3,<3.0",
  "flask>=2.2,<3.0",
  "prometheus-client>=0.16.0,<1.0",
  "shamir>=0.1",
  "pynacl>=1.5,<2.0",
  "boto3>=1.28,<2.0",
  "PyQt5>=5.15,<6.0",
  "PyYAML>=6.0,<7.0",
  "zstandard>=0.23.0",
  "tqdm>=4.66.0",
  "psutil>=5.9.0",
  "requests>=2.32,<3.0",
]

[project.scripts]
zilant = "zilant_prime_core.cli:cli"

[project.urls]
Homepage      = "https://github.com/QuantumKeyUYU/zilant-prime-core"
Documentation = "https://github.com/QuantumKeyUYU/zilant-prime-core#readme"
Issues        = "https://github.com/QuantumKeyUYU/zilant-prime-core/issues"

[project.optional-dependencies]
test = [
  "pytest>=8.0,<9.0",
  "pytest-cov>=5.0,<6.0",
  "pytest-timeout>=2.3,<3.0",
  "hypothesis>=6.100,<7.0",
  "filelock>=3.13,<4.0",
]

dev = [
  "black>=24.4,<25.0",
  "isort>=5.13,<6.0",
  "ruff>=0.4,<0.5",
  "mypy>=1.10,<2.0",
  "pre-commit>=2.21,<3.0",
  "bandit>=1.7,<2.0",
  # Semgrep под Windows пока не работает, ставим только на *nix
  "semgrep>=1.68,<2.0; sys_platform!='win32' and sys_platform!='cygwin'",
  "cyclonedx-bom>=3.16,<7.0",
  "build>=1.2,<2.0",
  "twine>=5.0,<6.0",
  "atheris>=2.1; python_version < '3.12'",
  "pyinstaller>=6.0,<7.0",
  "types-PyYAML>=6.0",
  "types-hvac>=2.3.0.0",
]

pq = [
  "pqclean[kyber768]>=1.0.0",
  "pqclean[dilithium2]>=1.0.0",
  "oqs-python>=1.0.0",
]

docs = [
  "sphinx>=7.2,<8.0",
  "furo>=2023.9",
  "sphinx-autodoc-typehints>=1.25,<2.0",
  "m2r2>=0.3.4",
  "sphinxcontrib-mermaid>=1.0.0",
]

metrics = [
  "prometheus-client>=0.16.0,<1.0",
  "flask>=2.2,<3.0",
]

notify = [
  "slack-sdk>=3.0,<4.0",
  "python-telegram-bot>=20.0,<21.0",
]

[tool.setuptools]
package-dir = { "" = "src" }
ext-modules = [
  { name = "zilant_prime_core.utils.crypto_core", sources = ["src/zilant_prime_core/utils/crypto_core.c"], language = "c" },
  { name = "zilant_prime_core.utils.hardening",   sources = ["src/zilant_prime_core/utils/hardening.c"],   language = "c" },
]

[tool.setuptools.packages.find]
where      = ["src"]
namespaces = false

[tool.black]
line-length    = 120
target-version = ["py310", "py311"]

[tool.isort]
profile                = "black"
line_length            = 120
known_first_party      = ["zilant_prime_core"]
known_standard_library = ["tomllib"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "B"]
ignore = ["E402", "B904", "C901"]

[tool.lint.mccabe]
max-complexity = 12

[tool.mypy]
python_version           = 3.10
strict                   = true
allow_untyped_decorators = true
warn_return_any          = false
ignore_missing_imports   = true
disable_error_code       = ["attr-defined"]

[tool.zilant]
pq_mode      = "classic"
backend_type = "local"
