[metadata]
name = zilant_prime_core
version = 0.1.0
description = ZILANT Prime core library
author = Your Name
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages = find:
package_dir =
    =src
install_requires =
    cryptography>=3.4.7
    argon2-cffi>=21.3.0
    hypothesis>=6.0.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=7.0
    hypothesis>=6.0
    flake8>=5.0
    bandit>=1.7
    pre-commit>=2.20
    isort>=5.0
    black>=23.0

[tool:pytest]
addopts = -q --disable-warnings --maxfail=1

[isort]
profile = black
