[metadata]
name = zilant-prime-core
version = 0.1.0
description = Core library for ZILANT Prime phase VDF and encryption
author = Your Name
author_email = you@example.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
python_requires = >=3.9,<4.0     # <-- тоже запретил только Py2 и Py4
packages = find:
package_dir =
    = src
install_requires =
    aead>=0.2,<1.0
    cryptography>=3.4.7
    argon2-cffi>=21.3.0
    hypothesis>=6.0.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=7.0.0
    flake8>=5.0.0
    bandit>=1.7.0
    pre-commit>=2.20.0
    isort>=5.0
    black>=23.0

[tool:pytest]
addopts = -q --disable-warnings --maxfail=1

[isort]
profile = black
