[metadata]
name = zilant-prime-core
version = 0.1.0
description = ZILANT Prime core library

[options]
packages = find:
install_requires =
    aead>=0.2,<1.0
    cryptography>=3.4.7
    argon2-cffi>=21.3.0
    hypothesis>=6.0.0

[options.extras_require]
dev =
    pytest>=7.0.0
    flake8>=5.0.0
    bandit>=1.7.0
    isort>=5.0
    black>=23.0
    pre-commit>=2.20.0

[flake8]
# пропускаем вспомогательный скрипт, чтобы flake8 не падал на sys-import
exclude =
    .git,
    __pycache__,
    strip_bom.py
max-line-length = 88
